--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "dotenv": "^16.4.7",
     "jsonwebtoken": "^9.0.2",
     "koa": "^2.15.3",
+    "koa-body": "^6.0.1",
     "koa-bodyparser": "^4.4.1",
+    "koa-static": "^5.0.0",
     "mongodb": "^6.12.0",
     "mongoose": "^8.8.3"
   }
